--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,12 @@ instagram_username: suviry_official
 linkedin_username: Haoyu Sun
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
+#stackoverflow_username: "00000001"
+#dribbble_username: jekyll
+#flickr_username: jekyll
+#xing_username: jekyll
+#pinterest_username: jekyll
+#orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 
