--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ darkmode: false
 # Social links
 twitter_username: suviry1
 github_username:  hsun29
-facebook_username: Haoyu Sun
+facebook_username: https://www.facebook.com/profile.php?id=100089464023897&mibextid=LQQJ4d
 instagram_username: suviry_official
 linkedin_username: Haoyu Sun
 youtube_username: haoyusun131
