--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ googlescholar_username: Haoyu Sun
 # Additional icon links
 
 additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+- title: Linkdedin
+  icon: fab fa-linkedin
   url: www.linkedin.com/in/haoyu-sun-a0a24b286
-
+# https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
