--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ googlescholar_username: Haoyu Sun
 
 additional_links:
 - title: Linkdedin
-  icon: fab fa-linkedin
+  icon: fa-brands fa-linkedin
   url: www.linkedin.com/in/haoyu-sun-a0a24b286
 # https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 # - title: another link
