--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ darkmode: false
 # Social links
 twitter_username: suviry1
 github_username:  hsun29
-facebook_username: Haoyu Sun
+facebook_username: haoyu-sun
 instagram_username: suviry_official
-linkedin_username: Haoyu Sun
+linkedin_username: www.linkedin.com/in/haoyu-sun-a0a24b286
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
 #stackoverflow_username: "00000001"
