--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ twitter_username: suviry1
 github_username:  hsun29
 facebook_username: haoyu-sun
 instagram_username: suviry_official
-linkedin_username: haoyu-sun-a0a24b286
+linkedin_username: hsun29
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
 #stackoverflow_username: "00000001"
