--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ twitter_username: suviry1
 github_username:  hsun29
 facebook_username: haoyu-sun
 instagram_username: suviry_official
-linkedin_username: hsun29
+linkedin_username: haoyusun
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
 #stackoverflow_username: "00000001"
@@ -37,10 +37,7 @@ googlescholar_username: Haoyu Sun
 
 # Additional icon links
 
-additional_links:
-- title: Linkdedin
-  icon: fa-brands fa-linkedin
-  url: www.linkedin.com/in/haoyu-sun-a0a24b286
+
 # https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
