--- a/_config.yml
+++ b/_config.yml
@@ -25,15 +25,15 @@ twitter_username: suviry1
 github_username:  hsun29
 facebook_username: haoyu-sun
 instagram_username: suviry_official
-#linkedin_username: haoyusun
+linkedin_username: haoyusun
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
-#stackoverflow_username: "00000001"
-#dribbble_username: jekyll
-#flickr_username: jekyll
-#xing_username: jekyll
-#pinterest_username: jekyll
-#orcid_username: 0000-0000-0000-0000
+stackoverflow_username: "00000001"
+dribbble_username: jekyll
+flickr_username: jekyll
+xing_username: jekyll
+pinterest_username: jekyll
+orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 
