--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,7 @@ name: Haoyu Sun (孙浩宇)
 title: AI algorithm researcher / big data analyst
 email: hsun29@hawk.iit.edu
 # email_title: Email (Email title override)
-phone: | 
-+1 124788172 (U.S) 
-+86 13848676210 (Mainland of China)
+phone: +1 124788172 (U.S) / +86 13848676210 (Mainland of China)
 # phone_title: Phone (Phone title override)
 website: http://www.linkedin.com/in/hsun29
 # website_title: Web (Website title override)
