--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ darkmode: false
 # Social links
 twitter_username: suviry1
 github_username:  hsun29
-facebook_username: haoyu-sun
+#facebook_username: haoyu-sun
 instagram_username: suviry_official
-linkedin_username: Haoyu Sun
+#linkedin_username: Haoyu Sun
 youtube_username: haoyusun131
 googlescholar_username: Haoyu Sun
 #stackoverflow_username: "00000001"
