--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ email: hsun29@hawk.iit.edu
 phone: +1 124788172 (U.S) / +86 13848676210 (Mainland of China)
 # phone_title: Phone (Phone title override)
 website: http://www.linkedin.com/in/hsun29
-# website_title: Web (Website title override)
+website_title: Linkind Personal Website
+
 
 # Dark Mode (true/false/never)
 darkmode: false
