--- a/_config.yml
+++ b/_config.yml
@@ -52,13 +52,9 @@ googlescholar_username: Haoyu Sun
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+ Haoyu Sun who got Matser's Degree in Illinois Institute of Technology, he was born in 1996 in Inner Mongolia, and work with Dr. <mark>[Yan Yan](https://tomyan555.github.io/)</mark> (Tom Yan) who is currently a Gladwin Development Chair Assistant Professor in the Department of Computer Science at Illinois Institute of Technology. 
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+
 
 content:
   - title: Projects # Title for the section
