--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ googlescholar_username: Haoyu Sun
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
- Haoyu Sun who got Matser's Degree in Illinois Institute of Technology, he was born in 1996 in Inner Mongolia, and work with Dr. </mark>Yan Yan</mark> [Linik](https://tomyan555.github.io/) (Tom Yan) who is currently a Gladwin Development Chair Assistant Professor in the Department of Computer Science at Illinois Institute of Technology. 
+ Haoyu Sun who got Matser's Degree in Illinois Institute of Technology, he was born in 1996 in Inner Mongolia, and work with Dr. [Yan Yan](https://tomyan555.github.io/) (Tom Yan) who is currently a Gladwin Development Chair Assistant Professor in the Department of Computer Science at Illinois Institute of Technology. 
 
 
 
