--- a/_config.yml
+++ b/_config.yml
@@ -61,21 +61,18 @@ about_content: | # this will include new lines to allow paragraphs
 
 content:
   - title: Projects # Title for the section
-    layout: list # Type of content section (list/text)
+    layout: text # Type of content section (list/text)
     content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: Application of the Linear ViT model to the recognition of Alzheimer's disease
-        link: https://github.com/hsun29/deeplearning
+
         link_text: Linear ViT
         additional_links:
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          - title:  Linear ViT
             icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+            url: https://github.com/hsun29/deeplearning
         quote: >
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
