--- a/_config.yml
+++ b/_config.yml
@@ -54,21 +54,20 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
  Haoyu Sun who got MAI (Master in AI) degree in Illinois Institute of Technology (IIT), he was born in 1996 in Inner Mongolia, and work with Dr. [Yan Yan](https://tomyan555.github.io/) (Tom Yan) who is currently a Gladwin Development Chair Assistant Professor in the Department of Computer Science at Illinois Institute of Technology.
 
- The main courses are: <mark>deep learning (computer vision)<mark>, <mark>machine learning<mark>, NLP, <mark>probability graph models<mark> and <mark>bioinformatic<mark> etc. You can feel free to check the AI core course in [IIT](https://www.iit.edu/academics/programs/artificial-intelligence-mas/) website .
- GPA > 3.65.
- 
- The research directions are subdivided into: image detection and segmentation, bioinformatics analysis, and reliable intelligent decision-making framework.
+ The main courses are: deep learning (computer vision), machine learning, NLP, probability graph models and bioinformatic etc. You can feel free to check the AI core course in [IIT](https://www.iit.edu/academics/programs/artificial-intelligence-mas/) website .
+
+ GPA > 3.65 and the research directions are subdivided into: image detection and segmentation, bioinformatics analysis, and reliable intelligent decision-making framework.
 
 content:
   - title: Projects # Title for the section
-    layout: text # Type of content section (list/text)
+    layout: list # Type of content section (list/text)
     content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: Application of the Linear ViT model to the recognition of Alzheimer's disease
         #link: https://github.com/hsun29/deeplearning
-        link_text: Linear ViT
+        #link_text: Linear ViT
         additional_links:
           - title:  Linear ViT
             icon: fab fa-github
