--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
-        title: Application of the Linear ViT model to the recognition of Alzheimer's disease
+        title: Application of the Linear ViT model to the recognition of Alzheimer's disease (2023)
         #link: https://github.com/hsun29/deeplearning
         #link_text: Linear ViT
         additional_links:
@@ -77,17 +77,17 @@ content:
         description: | # this will include new lines to allow paragraphs
           In this project, we combine the existing traditional models and apply the new model to the MRI image detection of Alzheimer's disease to achieve the identification of different degrees of pathological stages. This project compares the characteristics of the old and new model structures and conducts in-depth experimental tests. On the basis of testing, we integrate the idea of improving the prediction accuracy of the model, and design the block-CNN structure to improve the accuracy of the traditional CNN model structure. At the same time, the attention mechanism of linear complexity is applied to the computer vision classification task, which improves the efficiency and accuracy of the model.
 
-        title: Application of the Linear ViT model to the recognition of Alzheimer's disease
+        title: TTA in image Segmentation (2023-Now)
         #link: https://github.com/hsun29/deeplearning
         #link_text: Linear ViT
         additional_links:
-          - title:  Linear ViT
+          - title:  TTA
             icon: fab fa-github
             url: https://github.com/hsun29/deeplearning
         quote: >
-          Use a less complex linear transformer to achieve classification tasks with comparable accuracy to transformers.
+          Research on the solution of domain drift problem in computer vision.
         description: | # this will include new lines to allow paragraphs
-          In this project, we combine the existing traditional models and apply the new model to the MRI image detection of Alzheimer's disease to achieve the identification of different degrees of pathological stages. This project compares the characteristics of the old and new model structures and conducts in-depth experimental tests. On the basis of testing, we integrate the idea of improving the prediction accuracy of the model, and design the block-CNN structure to improve the accuracy of the traditional CNN model structure. At the same time, the attention mechanism of linear complexity is applied to the computer vision classification task, which improves the efficiency and accuracy of the model.
+          This project mainly solves the domain drift problem of training and test sets and real-world engineering data, reduces the training cost of model engineering application and the workload of feature marking, and has far-reaching engineering application significance.
   - title: Experience
     layout: list
     content:
