--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           In this project, we combine the existing traditional models and apply the new model to the MRI image detection of Alzheimer's disease to achieve the identification of different degrees of pathological stages. This project compares the characteristics of the old and new model structures and conducts in-depth experimental tests. On the basis of testing, we integrate the idea of improving the prediction accuracy of the model, and design the block-CNN structure to improve the accuracy of the traditional CNN model structure. At the same time, the attention mechanism of linear complexity is applied to the computer vision classification task, which improves the efficiency and accuracy of the model.
 
-      - layout: right
+      - layout: left
         title: TTA in image Segmentation (2023-Now)
         #link: https://github.com/hsun29/deeplearning
         #link_text: Linear ViT
@@ -107,7 +107,7 @@ content:
   - title: Experience
     layout: list
     content:
-      - layout: left
+      - layout: right
         title: Illinois Institute of Technology
         sub_title: Graduate/Resaerch/Teaching Assistant
         caption: 9/2022 - Present
@@ -128,7 +128,7 @@ content:
           
           3, grading assignments/exams, proctoring examinations, and providing feedback on assignments.
       
-      - layout: left
+      - layout: right
         title: Research Institute of Highway Ministry of Transport (RoadMainT Co Ltd)
         sub_title: Research And Development Engineer
         caption: 3/2022 - 1/2023
@@ -151,7 +151,7 @@ content:
           
           • Established the classification algorithm based on the highway pavement diseases to predict the probability of structural disease in each road section. Then based on the result of predict, according to the actual production, visualization results are used to provide scientific decision-making for highway management departments.
       
-      - layout: left
+      - layout: right
         title: Research Institute of Highway Ministry of Transport (RoadMainT Co Ltd)
         sub_title: Research And Development Engineer
         caption: 7/2019 - 3/2022
@@ -171,7 +171,7 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: top-right
+      - layout: top-left
         title: Illinois Institute of Technology
         sub_title: Masters in AI
         caption: 09/2021 - 12/2023
@@ -181,7 +181,7 @@ content:
           Deep Learning, Machine Learning, NLP, Bioinformatics Analysis, Algorithm Design, Databases, Advanced AI.
 
 
-      - layout: top-right
+      - layout: top-left
         title: Inner Mongolia University of Technology
         sub_title: Bachelor of Information and Computing Science
         caption: 09/2015 - 7/2019
@@ -193,7 +193,7 @@ content:
   - title: Publishes # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: right
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: A Decision Making Framework for Recommended Maintenance of Road Segments (2023)
@@ -209,7 +209,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           With the rapid development of global road transportation, countries worldwide have completed the construction of road networks. However, the ensuing challenge lies in the maintenance of existing roads. It is well-known that countries allocate limited budgets to road maintenance projects, and road management departments face difficulties in making scientifically informed maintenance decisions. Therefore, integrating various artificial intelligence decision-making techniques to thoroughly explore historical maintenance data and adapt them to the context of road maintenance scientific decision-making has become an urgent issue. This integration aims to provide road management departments with more scientific tools and evidence for decision-making. The framework proposed in this paper primarily addresses the following four issues: 1) predicting the pavement performance of various routes, 2) determining the prioritization of maintenance routes, 3) making maintenance decisions based on the evaluation of the effects of past maintenance, and considering comprehensive technical and management indicators, and 4) determining the prioritization of maintenance sections based on the maintenance effectiveness and recommended maintenance effectiveness. By tackling these four problems, the framework enables intelligent decision-making for the optimal maintenance plan and maintenance sections, taking into account limited funding and historical maintenance management experience.
       
-      - layout: left
+      - layout: right
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: Pavement performance prediction method based on GM-ANN model (Chinese Version:基于GM-ANN模型的路面性能预测方法)
@@ -270,7 +270,7 @@ content:
   - title: Honors, awards and  certificate
     layout: list
     content:
-      - layout: left
+      - layout: right
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: 重点科技项目
